--- a/bizopt/BO/templates/messanger.html
+++ b/bizopt/BO/templates/messanger.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/css/uikit.min.css" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 
 </head>
 
@@ -12,45 +14,35 @@
 <body style="height: 100%;">
 
 
-   
-
-    <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit-icons.min.js"></script>
-
-
-</body>
-
-</html>
-
-<!--
-     <div class="uk-card uk-card-default uk-width-2-3 uk-border-rounded uk-margin uk-position-bottom"
+    <form action="GET">
+    <div class="uk-card uk-card-default uk-width-2-3 uk-border-rounded uk-margin uk-position-bottom"
         style="margin: 5% auto; height: 85%; ">
+        <div class="uk-card-body uk-panel uk-panel-scrollable uk-padding-small"
+            style="height: 95%; padding-bottom: 100px;">
 
-        <div class="uk-card-body uk-padding-small">
 
-            начало текста продавца
+            <!-- начало текста продавца -->
             <div class="guest uk-grid-small uk-flex-bottom uk-flex-left" uk-grid>
-                <div class="uk-width-auto">
-                    <img class="uk-border-circle" width="32" height="32"
-                        src="https://getuikit.com/docs/images/avatar.jpg">
-                </div>
                 <div class="uk-width-auto ">
                     <div class="uk-card uk-card-body uk-card-small uk-card-default uk-border-rounded uk-width-2-3">
                         <p class="uk-margin-remove">Hey dude! Hey dude!Hey dude!Hey dude!Hey dude!Hey dude!Hey dude!Hey
                             dude!Hey dude!Hey dude!Hey dude!Hey dude!Hey dude!Hey dude!Hey dude!Hey dude!Hey dude!Hey
-                            dude!Hey dude!Hey dude!Hey dude!Hey dude!Hey dude!Hey dude!Hey dude!Hey dude!Hey dude!Hey
-                            dude!Hey dude!Hey dude!Hey dude!Hey dude!Hey dude!Hey dude!Hey dude!Hey dude!Hey dude!Hey
-                            dude!Hey dude!Hey dude!Hey dude!Hey dude!</p>
+                            dude!Hey dude!Hey dude!Hey dude!Hey</p>
                     </div>
                 </div>
-            </div>
-            конец текста продавца
-
-            начало моего текста
-            <div class="me uk-grid-small uk-flex-bottom uk-flex-right uk-text-right" uk-grid>
                 <div class="uk-width-auto">
+                    <img class="uk-border-circle" width="32" height="32"
+                        src="https://getuikit.com/docs/images/avatar.jpg">
+                </div>
+            </div>
+            <!-- конец текста продавца -->
+
+            <!-- начало моего текста -->
+            <div class="me uk-grid-small uk-flex-bottom uk-flex-right" uk-grid>
+                <div class="uk-width-auto uk-flex uk-flex-right">
                     <div class="uk-card uk-card-body uk-card-small uk-card-primary uk-border-rounded uk-width-2-3">
-                        <p class="uk-margin-remove">Hi brow :) Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow
+                        <p class="uk-margin-remove uk-text-break">Hi brow :) Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi
+                            brow :)Hi brow
                             :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow
                             :)Hi
                             brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi
@@ -65,66 +57,33 @@
                         src="https://getuikit.com/docs/images/avatar.jpg">
                 </div>
             </div>
-            конец моего текста
-
-             начало моего текста
-             <div class="me uk-grid-small uk-flex-bottom uk-flex-right uk-text-right" uk-grid>
-                <div class="uk-width-auto">
-                    <div class="uk-card uk-card-body uk-card-small uk-card-primary uk-border-rounded uk-width-2-3">
-                        <p class="uk-margin-remove">Hi brow :) Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow
-                            :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow
-                            :)Hi</p>
-                    </div>
-                </div>
-                <div class="uk-width-auto">
-                    <img class="uk-border-circle" width="32" height="32"
-                        src="https://getuikit.com/docs/images/avatar.jpg">
-                </div>
-            </div>
-            конец моего текста
-
-            начало текста продавца
-            <div class="guest uk-grid-small uk-flex-bottom uk-flex-left" uk-grid>
-                <div class="uk-width-auto">
-                    <img class="uk-border-circle" width="32" height="32"
-                        src="https://getuikit.com/docs/images/avatar.jpg">
-                </div>
-                <div class="uk-width-auto">
-                    <div class="uk-card uk-card-body uk-card-small uk-card-default uk-border-rounded uk-width-2-3">
-                        <p class="uk-margin-remove">
-                            <p class="uk-margin-remove">Hi brow :) Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow
-                                :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow
-                                :)Hi</p>
-                        </p>
-                    </div>
-                </div>
-            </div>
-            конец текста продавца
+            <!-- конец моего текста -->
         </div>
+    </form>
 
-        <div class="uk-card-footer uk-padding-remove uk-position-bottom">
-            <div class="uk-grid-small uk-flex-middle" uk-grid>
-                <div class="uk-width-auto">
-                    <a href="#" class="uk-icon-link uk-margin-small-left" uk-icon="icon: happy"></a>
-                </div>
-                <div class="uk-width-expand">
-                    <div class="uk-padding-small uk-padding-remove-horizontal">
-                        <textarea class="uk-textarea uk-padding-remove uk-border-remove" rows="1"
-                            placeholder="Escreva a mensagem..."></textarea>
+
+        <form action="POST">
+            <div class="uk-card-footer uk-padding-remove uk-position-bottom" style="background-color: white;">
+                <div class="uk-grid-small uk-flex-middle" uk-grid>
+
+                    <div class="uk-width-expand" style="margin: 0 3%">
+                        <div class="uk-padding-small uk-padding-remove-horizontal uk-flex" style="margin: 0 auto">
+                            <textarea class="uk-textarea uk-padding-remove uk-border-rounded uk-margin-small-right"
+                                rows="1" placeholder="Напишите сообщение..." style="font-size: 20px;"></textarea>
+                            <button href="#" class="uk-button uk-button-text material-symbols-outlined" type="submit">send</button>
+                        </div>
+                    </div>
+                    <div class="uk-width-auto">
                     </div>
                 </div>
-                <div class="uk-width-auto">
-                    <ul class="uk-iconnav uk-margin-small-right">
-                        <li>
-                            <a href="#" uk-icon="icon: image"></a>
-                        </li>
-                        <li>
-                            <a href="#" uk-icon="icon: location"></a>
-                        </li>
-                    </ul>
-                </div>
             </div>
-        </div>
-
+        </form>
     </div>
--->
+
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit-icons.min.js"></script>
+
+
+</body>
+
+</html>
