--- a/bizopt/BO/templates/orders.html
+++ b/bizopt/BO/templates/orders.html
@@ -39,9 +39,10 @@
                                     <p class="uk-margin-remove">{{ user.email}}</p>
                                 </div>
                             </div>
+                            <form method="POST" action="">
                             <div class="uk-margin-top">
                                 <h3>Отзыв:</h3>
-                                <textarea class="uk-textarea" name="message" id="" rows="10" style="width: 100%;"></textarea>
+                                <textarea class="uk-textarea" name="review" id="" rows="10" style="width: 100%;"></textarea>
                                 <div class="uk-flex" style="margin-left: 45%">
                                     <p class="uk-margin-small-top uk-margin-small-right">Оценка: </p>
                                     <div class="uk-margin-remove-right rating-area">
@@ -58,10 +59,12 @@
                                     </div>
                                 </div>
                             </div>
+                                {% csrf_token %}
                             <p class="uk-text-right">
                                 <button class="uk-button uk-button-default uk-modal-close" type="button">Закрыть</button>
-                                <button class="uk-button uk-button-primary" type="button">Опубликовать</button>
+                                <button name="comment_product" class="uk-button uk-button-primary" type="submit" onclick="UIkit.notification({message: 'Отзыв сохранён', status: 'success'})" value="{{ product.id }}">Опубликовать</button>
                             </p>
+                            </form>
                         </div>
                     </div>
                 </div>
