--- a/bizopt/BO/templates/becomeCreatorTemplates/template3.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template3.html
@@ -40,7 +40,7 @@
                         <td>{{ product.cost }}</td>
                         <td>text</td>
                         <td>
-                            <button name="delete" form="goodsList" value={{product.id}} href="" type="submit"
+                            <button name="delete" form="goodsList" value="{{product.id}}" href="" type="submit"
                                  class="btn btn-outline-secondary"> X </button>
                         </td>
                     </tr>
