--- a/bizopt/BO/templates/resumes.html
+++ b/bizopt/BO/templates/resumes.html
@@ -117,7 +117,7 @@
                 <h4 class="uk-margin-small-bottom">Электроника - Смартфоны</h4>
                 <h2 class="uk-margin-medium-bottom uk-margin-small-top">Смартфоны</h2>
                 <div class="textStyleHeaderRegion uk-margin-medium-bottom">
-                    <input type="checkbox" value="value2" class="uk-margin-small-right">
+                    <input type="radio" value="value2" class="uk-margin-small-right">
                     <label>Мой регион</label>
                 </div>
             </div>
@@ -127,7 +127,7 @@
                     <p>Рейтинг продавца</p>
                     <div class="uk-margin-small-left">
                         <div>
-                            <input type="checkbox" value="value1">
+                            <input type="radio" value="value1">
                             <label>от <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star"></span>
@@ -135,7 +135,7 @@
                                 <span class="fa fa-star"></span></label>
                         </div>
                         <div>
-                            <input type="checkbox" value="value2">
+                            <input type="radio" value="value2">
                             <label>от <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
@@ -143,7 +143,7 @@
                                 <span class="fa fa-star"></span></label>
                         </div>
                         <div>
-                            <input type="checkbox" value="value1">
+                            <input type="radio" value="value1">
                             <label>от <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
@@ -151,7 +151,7 @@
                                 <span class="fa fa-star"></span></label>
                         </div>
                         <div>
-                            <input type="checkbox" value="value2">
+                            <input type="radio" value="value2">
                             <label>Не важно</label>
                         </div>
                     </div>
@@ -175,27 +175,27 @@
                     <p>Срок изготовления</p>
                     <div class="uk-margin-small-left">
                         <div>
-                            <input type="checkbox" value="value1">
+                            <input type="radio" value="value1">
                             <label>до 1го дня</label>
                         </div>
                         <div>
-                            <input type="checkbox" value="value2">
+                            <input type="radio" value="value2">
                             <label>до 3ех дней</label>
                         </div>
                         <div>
-                            <input type="checkbox" value="value1">
+                            <input type="radio" value="value1">
                             <label>до 1 недели</label>
                         </div>
                         <div>
-                            <input type="checkbox" value="value2">
+                            <input type="radio" value="value2">
                             <label>до 1 месяца</label>
                         </div>
                         <div>
-                            <input type="checkbox" value="value1">
+                            <input type="radio" value="value1">
                             <label>до 3ех месяцев</label>
                         </div>
                         <div>
-                            <input type="checkbox" value="value1">
+                            <input type="radio" value="value1">
                             <label>более 1го года</label>
                         </div>
                     </div>
@@ -204,11 +204,11 @@
                     <p>Исполнитель</p>
                     <div class="uk-margin-small-left">
                         <div>
-                            <input type="checkbox" value="value1">
+                            <input type="radio" value="value1">
                             <label>ИП</label>
                         </div>
                         <div>
-                            <input type="checkbox" value="value1">
+                            <input type="radio" value="value1">
                             <label>ООО</label>
                         </div>
                     </div>
