--- a/bizopt/BO/templates/goods.html
+++ b/bizopt/BO/templates/goods.html
@@ -15,7 +15,7 @@
                 <h4 class="uk-margin-small-bottom">Электроника - Смартфоны</h4>
                 <h2 class="uk-margin-medium-bottom uk-margin-small-top">Смартфоны</h2>
                 <div class="textStyleHeaderRegion uk-margin-medium-bottom">
-                    <input type="checkbox" value="value2" class="uk-margin-small-right">
+                    <input type="radio" value="value2" class="uk-margin-small-right">
                     <label>Мой регион</label>
                 </div>
             </div>
@@ -25,7 +25,7 @@
                     <p>Рейтинг продавца</p>
                     <div class="uk-margin-small-left">
                         <div>
-                            <input type="checkbox" value="value1">
+                            <input type="radio" value="value1">
                             <label>от <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star"></span>
@@ -33,7 +33,7 @@
                                 <span class="fa fa-star"></span></label>
                         </div>
                         <div>
-                            <input type="checkbox" value="value2">
+                            <input type="radio" value="value2">
                             <label>от <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
@@ -41,7 +41,7 @@
                                 <span class="fa fa-star"></span></label>
                         </div>
                         <div>
-                            <input type="checkbox" value="value1">
+                            <input type="radio" value="value1">
                             <label>от <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
@@ -49,7 +49,7 @@
                                 <span class="fa fa-star"></span></label>
                         </div>
                         <div>
-                            <input type="checkbox" value="value2">
+                            <input type="radio" value="value2">
                             <label>Не важно</label>
                         </div>
                     </div>
@@ -71,27 +71,27 @@
                     <p>Срок изготовления</p>
                     <div class="uk-margin-small-left">
                         <div>
-                            <input type="checkbox" value="value1">
+                            <input type="radio" value="value1">
                             <label>до 1го дня</label>
                         </div>
                         <div>
-                            <input type="checkbox" value="value2">
+                            <input type="radio" value="value2">
                             <label>до 3ех дней</label>
                         </div>
                         <div>
-                            <input type="checkbox" value="value1">
+                            <input type="radio" value="value1">
                             <label>до 1 недели</label>
                         </div>
                         <div>
-                            <input type="checkbox" value="value2">
+                            <input type="radio" value="value2">
                             <label>до 1 месяца</label>
                         </div>
                         <div>
-                            <input type="checkbox" value="value1">
+                            <input type="radio" value="value1">
                             <label>до 3ех месяцев</label>
                         </div>
                         <div>
-                            <input type="checkbox" value="value1">
+                            <input type="radio" value="value1">
                             <label>более 1го года</label>
                         </div>
                     </div>
@@ -100,11 +100,11 @@
                     <p>Исполнитель</p>
                     <div class="uk-margin-small-left">
                         <div>
-                            <input type="checkbox" value="value1">
+                            <input type="radio" value="value1">
                             <label>ИП</label>
                         </div>
                         <div>
-                            <input type="checkbox" value="value1">
+                            <input type="radio" value="value1">
                             <label>ООО</label>
                         </div>
                     </div>
