--- a/bizopt/BO/templates/becomeCreatorTemplates/template2.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template2.html
@@ -34,8 +34,8 @@
                         <td class="">2021-05-23</td>
                         <th class="">
                                 <button name="in_work" class="uk-badge" type="submit" style="border-color: #1e87f0; padding: 10%; margin: 2px;" uk-tooltip="В работе" value="{{product.id}}" >1</button>
-                                <button name="2" class="uk-badge" type="submit" style="border-color: #1e87f0; padding: 10%; margin: 2px;" uk-tooltip="Сделано" value="{{product.id}}" >2</button>
-                                <button name="3" class="uk-badge" type="submit" style="border-color: #1e87f0; padding: 10%; margin: 2px;" uk-tooltip="Ожидает оплаты" value="{{product.id}}" >3</button>
+                                <button name="done" class="uk-badge" type="submit" style="border-color: #1e87f0; padding: 10%; margin: 2px;" uk-tooltip="Сделано" value="{{product.id}}" >2</button>
+                                <button name="payment" class="uk-badge" type="submit" style="border-color: #1e87f0; padding: 10%; margin: 2px;" uk-tooltip="Ожидает оплаты" value="{{product.id}}" >3</button>
                         </th>
                         <td class="uk-text-break">
                             <button name="decline_work" form="goodsList" type="submit" value="{{product.id}}"
