--- a/bizopt/BO/templates/messanger.html
+++ b/bizopt/BO/templates/messanger.html
@@ -25,9 +25,7 @@
             <div class="guest uk-grid-small uk-flex-bottom uk-flex-left" uk-grid>
                 <div class="uk-width-auto ">
                     <div class="uk-card uk-card-body uk-card-small uk-card-default uk-border-rounded uk-width-2-3">
-                        <p class="uk-margin-remove">Hey dude! Hey dude!Hey dude!Hey dude!Hey dude!Hey dude!Hey dude!Hey
-                            dude!Hey dude!Hey dude!Hey dude!Hey dude!Hey dude!Hey dude!Hey dude!Hey dude!Hey dude!Hey
-                            dude!Hey dude!Hey dude!Hey dude!Hey</p>
+                        <p class="uk-margin-remove">{{companion.id}}</p>
                     </div>
                 </div>
                 <div class="uk-width-auto">
@@ -41,15 +39,9 @@
             <div class="me uk-grid-small uk-flex-bottom uk-flex-right" uk-grid>
                 <div class="uk-width-auto uk-flex uk-flex-right">
                     <div class="uk-card uk-card-body uk-card-small uk-card-primary uk-border-rounded uk-width-2-3">
-                        <p class="uk-margin-remove uk-text-break">Hi brow :) Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi
-                            brow :)Hi brow
-                            :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow
-                            :)Hi
-                            brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi
-                            brow
-                            :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow
-                            :)Hi
-                            brow :)Hi brow :)Hi brow :)Hi brow :)Hi brow :)</p>
+                        <p class="uk-margin-remove uk-text-break">
+                            {{user.id}}
+                        </p>
                     </div>
                 </div>
                 <div class="uk-width-auto">
