--- a/bizopt/BO/templates/becomeCreatorTemplates/template6.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template6.html
@@ -441,8 +441,9 @@
         if (inputnum < 15 && input.value) {
             input.removeAttribute("disabled");
             input.placeholder = "";
+            let value = document.getElementById('inputvalue').value;
             var $inputGroup =
-            `<div class="input-group mt-2 mb-2 w-75"> <button class="btn btn-outline-secondary" onclick="removeInput(this, 1)" type="button"><i class="fa fa-minus"></i></button> <input type="text" name="set_${inputnum}" class="form-control" value="${document.getElementById('inputvalue').value}" disabled> <button class="btn btn-outline-secondary" onclick="changeInput(this)" type="button"><span class="material-icons"> mode_edit </span></button></div>`;
+            `<div class="input-group mt-2 mb-2 w-75"> <button class="btn btn-outline-secondary" onclick="removeInput(this, 1)" type="button"><i class="fa fa-minus"></i></button> <input type="text" name="set_${inputnum}" class="form-control" value="${value}" disabled> <button class="btn btn-outline-secondary" onclick="changeInput(this)" type="button"><span class="material-icons"> mode_edit </span></button></div>`;
             document.getElementById("inputDiv").insertAdjacentHTML("afterbegin", $inputGroup);
             input.value = "";
             inputnum++;
@@ -470,7 +471,12 @@
         let BtnImage = el.parentElement.getElementsByTagName("span")[0];
         inputPole.placeholder = "";
         if (inputPole.value){
-            inputPole.disabled ? BtnImage.innerHTML = "edit_off" : BtnImage.innerHTML = "mode_edit";
+            if (inputPole.disabled){
+                BtnImage.innerHTML = "edit_off"
+            } else {
+                inputPole.value = inputPole.value
+                BtnImage.innerHTML = "mode_edit";
+            }
             inputPole.disabled ? inputPole.removeAttribute("disabled") : inputPole.setAttribute("disabled", "disabled");
         } else {
             inputPole.placeholder = "Заполните это поле или удалите его";
@@ -481,8 +487,9 @@
         let key = el.parentElement.getElementsByTagName("input")[0];
         key.placeholder = "";
         if (keynum < 15 && key.value) {
+            let value = document.getElementById('keyValue').value
             var $inputGroup =
-            `<div class="input-group mt-2 mb-2 w-75"> <button class="btn btn-outline-secondary" onclick="removeInput(this, 0)" type="button"><i class="fa fa-minus"></i></button> <input type="text" name="key_${keynum}" class="form-control" disabled value="${document.getElementById('keyValue').value}"> <button class="btn btn-outline-secondary" onclick="changeInput(this)" type="button"><span class="material-icons"> mode_edit </span> </div>`;
+            `<div class="input-group mt-2 mb-2 w-75"> <button class="btn btn-outline-secondary" onclick="removeInput(this, 0)" type="button"><i class="fa fa-minus"></i></button> <input type="text" name="key_${keynum}" class="form-control" disabled value="${value}"> <button class="btn btn-outline-secondary" onclick="changeInput(this)" type="button"><span class="material-icons"> mode_edit </span> </div>`;
                 document.getElementById("keyDiv").insertAdjacentHTML("afterbegin", $inputGroup);
                 key.value = "";
                 keynum++;
