--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -226,7 +226,7 @@
             num = 2;
         }
         var xhr = new XMLHttpRequest()
-        xhr.open('GET', `becomeCreatorTemplates/${num}/`)
+        xhr.open('GET', `becomeCreatorTemplates/${6}/`)
         xhr.onload = function () {
             $('#MainWindowContainer').html(xhr.response)
         }
